--- a/tasks/task06/security/src/main/resources/application.properties
+++ b/tasks/task06/security/src/main/resources/application.properties
@@ -3,12 +3,19 @@ server.port=8090
 spring.application.name=task06
 
 # Details for datasource
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=security
+spring.datasource.username=bagas
+spring.datasource.password=bagas
+spring.datasource.url=jdbc:postgresql://localhost:5438/security
 spring.datasource.driverClassName=org.postgresql.Driver
 
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+logging.level.org.hibernate.SQL=DEBUG
 
 # Liquibase
 spring.liquibase.enabled=true
